<resources>
    <!-- App -->
    <string name="app_name">SmartWear</string>
    <string name="app_slogan">Clothing recommendations based on the weather</string>

    <!-- Actions -->
    <string name="action_enable_location">Enable location</string>
    <string name="action_use_current_location"><u>Use current location</u></string>
    <string name="action_close">Close</string>
    <string name="action_continue">Continue</string>
    <string name="action_search">Search</string>
    <string name="action_use_current_location_plain">Use current location</string>

    <!-- Welcome -->
    <string name="welcome_item_1">Search your location!</string>
    <string name="welcome_item_2">Get clothing recommendations!</string>
    <string name="welcome_item_3">Be always ready to have fun!</string>
    <string name="welcome_title">Hey there!</string>

    <!-- What's new dialog-->
    <string name="updated_version">Updated to v%1$s</string>
    <string name="whats_new">What\'s new</string>

    <!-- Location -->
    <string name="location_message">*For a better experience turn on the location in your device</string>
    <string name="snack_location_required">We need access to your location in order to provide you the weather.</string>
    <string name="request_location_title">We need access to your location</string>
    <string name="request_location_subtitle2">Do not worry, we will only use this when the app is active.</string>
    <string name="request_location_subtitle1">Our app uses this data to get a more accurate result on the weather forecast</string>
    <string name="enter_location_title">ENTER A LOCATION:</string>
    <string name="today_forecast_title">TODAY\'S FORECAST</string>
    <string name="recommendation_title">RECOMMENDATION</string>
    <string name="search_location_hint">City, State, Country..</string>
    <string name="forecast_location_name_title">For %1$s:</string>
    <string name="today_forecast_title_compose">Today\'s forecast</string>
    <string name="recommendation_title_compose">What to wear</string>
    <string name="search_results">Locations</string>
    <string name="no_locations_found">No matching locations found.</string>

    <!-- Settings -->
    <string name="version">Version</string>
    <string name="version_name">Version %1$s</string>
    <string name="rate_us">Rate us</string>
    <string name="got_to_website">Visit website</string>
    <string name="see_the_code">See the code</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="pref_privacy_policy_url" translatable="false">https://smartwear.puntogris.com/privacy-policy.html</string>
    <string name="pref_terms_and_conditions_url" translatable="false">https://smartwear.puntogris.com/terms-and-conditions.html</string>
    <string name="settings_label">Settings</string>
    <string name="theme">Themes</string>
    <string name="units">Units</string>
    <string name="transparency">Transparency</string>
    <string name="appearance">Appearance</string>
    <string name="settings_app_section">App</string>
    <string name="weather_data_attribution">Weather data</string>
    <string name="weather_data_attribution_summary">Weather data by Open-Meteo.com</string>
    <string name="open_meteo_url" translatable="false">https://open-meteo.com/</string>

    <!-- Snack -->
    <string name="snack_connection_error">An error occurred, check your connection and try again.</string>
    <string name="snack_query_required">Location can\'t be empty.</string>
    <string name="snack_location_updated_success">Location updated</string>

    <!-- Weather -->
    <string name="current_weather_temp_description">Now %1$s , %2$s.</string>
    <string name="weather_today_min_max">• Temperatures between %1$s and %2$s.</string>
    <string name="forecast_precipitation">• %1$s chance of rain.</string>
    <string name="forecast_wind">• Winds speeds up to %1$s.</string>
    <string name="forecast_humidity">• The humidity will reach %1$s.</string>
    <string name="forecast_stable">• The weather will be stable.</string>

    <!-- Temperature summary -->
    <string name="temp_raise_a_lot">, rising quite a bit</string>
    <string name="temp_decrease_a_lot">, decreasing quite a bit</string>
    <string name="temp_raise_a_little">, rising a bit</string>
    <string name="temp_decrease_a_little">, decreasing a bit</string>
    <string name="temp_not_changing">, will not change for a few hours</string>
    <string name="morning">until the morning.</string>
    <string name="afternoon">until the afternoon.</string>
    <string name="evening">until the evening.</string>
    <string name="night">until the night.</string>

    <!-- Clothing -->
    <string name="temp_minus_0">Danger! Winter is coming, time to wear all your closet at the same time!</string>
    <string name="temp_1_9">It very cold outside. Get a sweater or a winter jacket, also do not forget your scarf and gloves.</string>
    <string name="temp_10_14">Do not underestimate this cold weather, you will need a sweater and a cup of hot chocolate.</string>
    <string name="temp_15_19">With a light jacket or sweater you will be fine.</string>
    <string name="temp_20_29">Such a nice weather, perfect for jeans and a t-shirt.</string>
    <string name="temp_27_34">Time to get some shorts and invite yourself to a friend\'s house with a swimming pool.</string>
    <string name="temp_35_39">Dip in the pool, get your clothes of first, hello?..u there?</string>
    <string name="temp_max_40">Red alert! Going outside will melt your brain.</string>
    <string name="temp_error">This is illegal.</string>

    <string name="precipitation_15_60">Also carry a rain jacket just in case it rains.</string>
    <string name="precipitation_60">Put on a rain jacket or get your umbrella.</string>

    <!-- Other -->
    <string name="empty_location_holder">We did not find anything here, we invite you to search for a location or activate the automatic location.</string>
    <string name="empty_location_title">Choose your location</string>
    <string name="empty_location_body">Search for a city or use your current location to see what to wear today.</string>
    <string name="weather_error_inline">Weather is unavailable right now. Pull down to try again.</string>
    <string name="weather_icon_description">Current weather</string>
    <string name="preview_location_name">Lima</string>
    <string name="preview_location_display_name">Lima, Peru</string>
    <string name="preview_weather_description">Clear skies</string>

    <!-- Arrays -->
    <!-- Theme -->
    <string-array name="theme_names">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>

    <!-- Units -->
    <string-array name="units_names">
        <item>Standard</item>
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>

    <string-array name="units_values">
        <item>standard</item>
        <item>imperial</item>
        <item>metric</item>
    </string-array>
</resources>
