<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="Appearance"
        app:iconSpaceReserved="false">
        <ListPreference
            android:key="theme_preference_key"
            app:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            app:useSimpleSummaryProvider="true"
            app:title="Theme"
            app:iconSpaceReserved="false"/>
        <ListPreference
            android:key="units_preference_key"
            app:title="Units"
            android:defaultValue="metric"
            app:entries="@array/units_names"
            android:entryValues="@array/units_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="App"
        app:iconSpaceReserved="false">
        <Preference
            android:key="rate_app_preference_key"
            app:title="@string/rate_us"
            app:iconSpaceReserved="false"
            app:summary="@string/rate_the_app">
        </Preference>
        <Preference
            android:key="version_preference_key"
            app:title="@string/version"
            app:iconSpaceReserved="false">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="Transparency"
        app:iconSpaceReserved="false">
        <Preference
            android:key="licenses_preference_key"
            app:title="@string/open_source_licenses"
            app:iconSpaceReserved="false"/>
        <Preference
            app:title="@string/privacy_policy"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_privacy_policy_url" />
        </Preference>
        <Preference
            app:title="@string/terms_and_conditions"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_terms_and_conditions_url" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>